# BuildingAI

./: .gitignore  pyproject.toml
chapter_1/: main.py  task2.py  task3.py  task_5.py  task_6.py  task_7.py
chapter_2/: task_1.py  task_2.py  task_3.py  task_4.py
chapter_3/: task_11.py  task_12.py  task_13.py  task_14.py  task_15.py  task_16.py  task_17.py  task_18.py
